[gd_scene load_steps=10 format=3 uid="uid://cj1bnb4srcwqr"]

[ext_resource type="Script" path="res://Scripts/Life_bigtree.gd" id="1_lp4x6"]
[ext_resource type="Texture2D" uid="uid://22fkpkbwvjwt" path="res://Art/tree_0.png" id="2_c2hpi"]
[ext_resource type="Texture2D" uid="uid://dna7gj5b6ghnq" path="res://Art/tree_1.png" id="3_suqsh"]
[ext_resource type="Texture2D" uid="uid://dgwtduosroub" path="res://Art/tree_2.png" id="4_1gg5o"]
[ext_resource type="Texture2D" uid="uid://bhfpugerkdv6e" path="res://Art/poop_star_0.png" id="5_7px2i"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ld3jv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dv5i7"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dldvs"]
size = Vector2(36, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kca24"]
size = Vector2(325, 120)

[node name="Bigtree" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
input_pickable = true
script = ExtResource("1_lp4x6")

[node name="Timer" type="Timer" parent="."]

[node name="Vision" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="Collision" type="CollisionShape2D" parent="Vision"]
shape = SubResource("CapsuleShape2D_ld3jv")

[node name="Sprite_0" type="Sprite2D" parent="."]
texture = ExtResource("2_c2hpi")
offset = Vector2(0, -16)

[node name="Sprite_1" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_suqsh")
offset = Vector2(0, -32)

[node name="Sprite_2" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_1gg5o")
offset = Vector2(0, -320)

[node name="Dead_Sprite_0" type="Sprite2D" parent="."]
texture = ExtResource("5_7px2i")

[node name="DebugLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="Collision_0" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_dv5i7")
disabled = true

[node name="Collision_1" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(1, -31.5)
shape = SubResource("RectangleShape2D_dldvs")
disabled = true

[node name="Collision_2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-19.5, -67)
shape = SubResource("RectangleShape2D_kca24")
disabled = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Vision" to="." method="_on_vision_area_entered"]
[connection signal="area_exited" from="Vision" to="." method="_on_vision_area_exited"]
[connection signal="body_entered" from="Vision" to="." method="_on_vision_body_entered"]
